java/java-tests/testData/codeInsight/daemonCodeAnalyzer/javaDoc/Param0.java
/**
 * @param <error descr="Cannot resolve symbol 'myParam'">myParam</error> paramDescription
 */
class Test { }